<resources>
    <string name="app_name">Grocerie Buddy</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="winkel">Winkel</string>
    <string name="shop_location">Shop Location</string>
    <string name="title_activity_map">Map</string>
    <string name="settings">Settings</string>
    <string name="non_food">Non Food</string>
</resources>
